--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p class="smallText">We are making client better every day, and we are not even getting money for it, would be glad to see you using my client "-StormAx"</p>
                 <div class="clear"></div>
             </div>
-        </div>
+      <!--  </div>
     </div>
    <div class="bgWhite"> 
         <div class="wrapper4 center">
