--- a/index.html
+++ b/index.html
@@ -106,34 +106,25 @@
                 <p class="smallText">We are making client better every day, and we are not even getting money for it, would be glad to see you using my client "-StormAx"</p>
                 <div class="clear"></div>
             </div>
-      <!--  </div>
+        </div>
     </div>
    <div class="bgWhite"> 
         <div class="wrapper4 center">
-            <h2>ass</h2>
+            <h2><span style="font-size:140px; color:#ffd670;"> StA </span><span style="font-size:140px; color:#70ffac;">team</span></h2>
             <div class="hBlock2">
                 <div class="pic pic250 pic1"></div>
-                <p class="h5 cyan" style="text-align:left;">1</p>
-                <p class="smallText" style="text-align:left;">Easily connect distributed teams together, create one
-                    cohesive network no matter how far you are located from each other. Radmin VPN allows you to connect
-                    to remote PCs even behind firewalls you don’t control. </p>
+                <p class="h5 cyan" style="text-align:mid;"><span style="font-size:50px; color:#0b8940;">melon</span></p>
+                <p class="smallText" style="text-align:left;"></p>
             </div>
             <div class="hBlock2">
                 <div class="pic pic250 pic2"></div>
-                <p class="h5 cyan" style="text-align:left;">2</p>
-                <p class="smallText" style="text-align:left;">Thanks to the integration with <a
-                        href="https://www.radmin.com" title="Radmin">Radmin</a> remote control software, Radmin VPN
-                    allows you to securely access and work at your remote computer from anywhere, whether from home,
-                    hotel or airport. Your network resources – files, apps, and emails are just a click away wherever
-                    you go.</p>
+                <p class="h7" style="text-align:mid;"><h7>-StormAx</h7></p>
+                <p class="smallText" style="text-align:left;"></p>
             </div>
             <div class="hBlock2">
                 <div class="pic pic250 pic3"></div>
-                <p class="h5 cyan" style="text-align:left;">3</p>
-                <p class="smallText" style="text-align:left;">Play your favourite LAN games with your friends over the
-                    Internet. Free Radmin VPN does not limit the number of gamers. Thanks to the high speed of Radmin
-                    VPN, you won’t see the difference – you will play your favourite games as if you were playing over
-                    LAN. </p>
+                <p class="h5 cyan" style="text-align:mid;"><span style="font-size:50px; color:#a535d9;">Mʎɹ</span></p>
+                <p class="smallText" style="text-align:left;"></p>
             </div>
         </div>
     </div>
