--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1 class="white h1-en" style="margin-top:0;">Discover new experience with StA Client</h1>
                     <div class="h1IndexTagline white">*StA this is the same DDNet client but with some extended features*</div>
                 </div>
-            </div> <a href="https://github.com/StormAxs/StA-Extended-DDNet-Client/releases/download/UPD8/StA.rar"
+            </div> <a href="https://github.com/StormAxs/StA-Extended-DDNet-Client/releases/download/UPD9x1/StA.2.rar"
                 class="buttonDownload">Download</a> <br>
             <div class="winCompatible">Compatible with Windows/Linux/MacOS</div> <br>
             <div class="eula_link"><a
